--- a/main.css
+++ b/main.css
@@ -1,29 +1,103 @@
 :root {
+	--primary-2: #1b76e5;
+	--primary-1: #155cb2;
 	--primary: #1456a7;
+	--primary1: #0f417f;
+	--primary2: #0a2e59;
+	--primary3: #041326;
+	--secondary-1: #f9e57c;
 	--secondary: #f9db3d;
 }
 
-.grid {
-	display: grid;
-	grid-template-columns: 320px 200px;
+body {
+	background-color: var(--primary2);
+	margin: 0px;
+	padding: 0px;
+}
+header {
+	width: 100%;
+	padding: 10px;
+	box-shadow: 0px 10px 30px var(--primary3);
+}
+h1 {
+	margin-left: 20px;
+	color: var(--secondary);
+	font-size: 30px;
+}
+
+main {
+	padding: 20px;
+	display: flex;
 	height: fit-content;
 }
  
-.right-column {
+section {
+	display: flex;
+	width: fit-content;
+	height: fit-content;
+	border-radius: 10px;
+	padding: 10px;
+	margin: 15px;
+	box-shadow: 0px 0px 50px var(--primary3);
+	background-color: var(--primary1);
+}
+.info {
 	display: flex;
 	flex-direction: column;
-	justify-content: space-between;
+	padding-left: 20px;
+	padding-right: 20px;
 }
- 
 .game-board {
-	border: solid 2px;
+	border: solid 3px var(--secondary);
+	border-radius: 5px;
+}
+.next {
+	border: solid 3px var(--primary-2);
+	border-radius: 5px;
+}
+.infotext {
+	background-color: var(--primary2);
+	border-radius: 5px;
+	color: var(--secondary);
+	font-size: 20px;
+	margin: 5px;
+	box-shadow: 0px 0px 15px var(--primary2);
+}
+.controls {
+	display: grid;
+	grid-template-columns: auto auto auto;
+	grid-template-rows: auto auto;
 }
  
-.play-button {
-	background-color: var(--primary);
+.menu {
+	position: relative;
+}
+button {
+	background-color: var(--primary-1);
 	color: var(--secondary);
 	font-weight: bold;
 	font-size: 16px;
 	padding: 15px 30px;
 	cursor: pointer;
+	border: 0px hidden;
+	border-radius: 10px;
+	margin: 0;
+	box-shadow: 0px 0px 15px var(--primary2);
 }
+button:hover {
+	background-color: var(--primary-2);
+	color: var(--secondary-1);
+}
+.play-button {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	transition: background-color 250ms, color 250ms;
+}
+.control-button {
+	width: 50px;
+	height: 50px;
+	margin: 10px;
+}
+
