--- a/main.css
+++ b/main.css
@@ -15,7 +15,7 @@ body {
 	padding: 0px;
 }
 header {
-	width: 100%;
+	width: calc(100% - 2*10px);
 	padding: 10px;
 	box-shadow: 0px 10px 30px var(--primary3);
 }
