--- a/main.css
+++ b/main.css
@@ -67,6 +67,7 @@ section {
 	display: grid;
 	grid-template-columns: auto auto auto;
 	grid-template-rows: auto auto;
+	touch-action: pan-x pan-y;
 }
  
 .menu {
@@ -121,6 +122,19 @@ button:hover {
 	}
 	.game-board, .info {
 		margin: 20px auto;
+	}
+}
+@media only screen and (max-height:870px) {
+	.infotext {
+		margin: 2px;
+	}
+	.control-button {
+		width: 40px;
+		height: 40px;
+		margin: 5px;
+	}
+	.game-board, .info {
+		margin: 5px auto;
 	}
 }
 
