--- a/main.css
+++ b/main.css
@@ -9,6 +9,12 @@
 	--secondary: #f9db3d;
 }
 
+* {
+	font-family: "Arimo", sans-serif;
+	font-optical-sizing: auto;
+	font-style: normal;
+}
+
 body {
 	background-color: var(--primary2);
 	margin: 0px;
