--- a/main.css
+++ b/main.css
@@ -106,6 +106,9 @@ button:hover {
 	width: 50px;
 	height: 50px;
 	margin: 10px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 @media only screen and (max-width:1250px) {
