--- a/main.css
+++ b/main.css
@@ -15,6 +15,12 @@
 	font-style: normal;
 }
 
+.centered {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+
 body {
 	background-color: var(--primary2);
 	margin: 0px;
