--- a/main.css
+++ b/main.css
@@ -54,7 +54,7 @@ section {
 	height: fit-content;
 	border-radius: 10px;
 	padding: 10px;
-	margin: 15px;
+	margin: 20px;
 	box-shadow: 0px 0px 50px var(--primary3);
 	background-color: var(--primary1);
 }
@@ -139,7 +139,7 @@ button:hover {
 		height: fit-content;
 	}
 	section {
-		width: 95%;
+		width: 95% !important;
 		margin: 15px auto;
 	}
 	.menu {
