--- a/main.css
+++ b/main.css
@@ -52,6 +52,7 @@ section {
 	display: flex;
 	width: fit-content;
 	height: fit-content;
+	min-height: fit-content;
 	border-radius: 10px;
 	padding: 10px;
 	margin: 20px;
