--- a/main.css
+++ b/main.css
@@ -27,16 +27,19 @@ body {
 	margin: 0px;
 	padding: 0px;
 }
+
 header {
 	width: calc(100% - 2*10px);
 	padding: 10px;
 	box-shadow: 0px 10px 30px var(--primary3);
 }
+
 h1 {
 	margin-left: 20px;
 	color: var(--secondary);
 	font-size: 30px;
 }
+
 h3 {
 	color: var(--secondary);
 }
@@ -47,7 +50,7 @@ main {
 	flex-wrap: wrap;
 	height: fit-content;
 }
- 
+
 section {
 	display: flex;
 	width: fit-content;
@@ -59,23 +62,28 @@ section {
 	box-shadow: 0px 0px 50px var(--primary3);
 	background-color: var(--primary1);
 }
+
 .credits-and-instructions-wrap {
 	display: block;
 }
+
 .info {
 	display: flex;
 	flex-direction: column;
 	padding-left: 20px;
 	padding-right: 20px;
 }
+
 .game-board {
 	border: solid 3px var(--secondary);
 	border-radius: 5px;
 }
+
 .next {
 	border: solid 3px var(--primary-2);
 	border-radius: 5px;
 }
+
 .infotext {
 	background-color: var(--primary2);
 	border-radius: 5px;
@@ -84,16 +92,18 @@ section {
 	margin: 5px;
 	box-shadow: 0px 0px 15px var(--primary2);
 }
+
 .controls {
 	display: grid;
 	grid-template-columns: auto auto auto;
 	grid-template-rows: auto auto;
 	touch-action: pan-x pan-y;
 }
- 
+
 .menu {
 	position: relative;
 }
+
 button {
 	background-color: var(--primary-1);
 	color: var(--secondary);
@@ -107,16 +117,19 @@ button {
 	box-shadow: 0px 0px 15px var(--primary2);
 	transition: background-color 250ms, color 250ms;
 }
+
 button:hover {
 	background-color: var(--primary-2);
 	color: var(--secondary-1);
 }
+
 .play-button {
 	position: absolute;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
 }
+
 .control-button {
 	width: 50px;
 	height: 50px;
@@ -129,6 +142,7 @@ button:hover {
 .credits-and-instructions {
 	color: var(--secondary);
 }
+
 .credits-and-instructions a {
 	color: var(--secondary-2);
 }
@@ -139,43 +153,57 @@ button:hover {
 		display: block;
 		height: fit-content;
 	}
+
 	section {
 		width: 95% !important;
 		margin: 15px auto;
 	}
+
 	.menu {
-		width:100% !important;
+		width: 100% !important;
+	}
+
+	.credits-and-instructions-wrap {
+		height: fit-content !important;
 	}
 }
+
 @media only screen and (max-width:720px) {
 	.game {
 		flex-direction: column;
 	}
-	.game-board, .info {
+
+	.game-board,
+	.info {
 		margin: 20px auto;
 	}
 }
+
 @media only screen and (max-height:870px) {
 	.infotext {
 		margin: 2px;
 	}
+
 	.control-button {
 		width: 40px;
 		height: 40px;
 		margin: 5px;
 	}
-	.game-board, .info {
+
+	.game-board,
+	.info {
 		margin: 5px auto;
 	}
 }
+
 @media only screen and (max-width:480px) {
 	h1 {
 		font-size: 25px;
 	}
 }
+
 @media only screen and (max-width:390px) {
 	h1 {
 		font-size: 20px;
 	}
 }
-
