--- a/main.css
+++ b/main.css
@@ -105,7 +105,7 @@ section {
 	position: relative;
 }
 
-button {
+button, select {
 	background-color: var(--primary-1);
 	color: var(--secondary);
 	font-weight: bold;
@@ -116,6 +116,8 @@ button {
 	border-radius: 10px;
 	margin: 0;
 	box-shadow: 0px 0px 15px var(--primary2);
+}
+button {
 	transition: background-color 250ms, color 250ms;
 }
 
